# MLOPS-complete-ML-pipeline

./: .gitignore  params.yaml  pyproject.toml
dvclive/: params.yaml
experiments/: mynotebook.ipynb
